Add CborRenderer skeleton + fixes